# cmake_gtest_template

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
Google_tests/: CMakeLists.txt  mock_implementation_a.cpp  mock_implementation_b.cpp  test_implementation_a.cpp  test_implementation_b.cpp  test_implementation_c.cpp
sut_lib/: CMakeLists.txt  definitions.h  implementation_a.cpp  implementation_b.cpp  implementation_c.cpp
